--- a/newgen/make.conf
+++ b/newgen/make.conf
@@ -15,3 +15,4 @@ FFLAGS="${COMMON_FLAGS}"
 LC_MESSAGES=C
 MAKEOPTS="-j32"
 ACCEPT_LICENSE="* -@EULA"
+GENTOO_MIRRORS="http://mirrors.tuna.tsinghua.edu.cn/gentoo"
